@@ -32,17 +32,26 @@ if($#ARGV < 0) {
    @ARGV = qw(-h);
 }
 
-getopts('FThvf:M:b:', \%opts);
+getopts('FThvf:M:b:e:H:u:p:P:K:', \%opts);
 
 if($opts{'h'}) {
    print "(R)?ex - (Remote)? Execution\n";
    printf "  %-15s %s\n", "-b", "Run batch";
+   printf "  %-15s %s\n", "-e", "Run the given code fragment";
+   printf "  %-15s %s\n", "-H", "Execute task on these hosts (*)";
+   printf "  %-15s %s\n", "-u", "Username for the ssh connection (*)";
+   printf "  %-15s %s\n", "-p", "Password for the ssh connection (*)";
+   printf "  %-15s %s\n", "-P", "Private Keyfile for the ssh connection (*)";
+   printf "  %-15s %s\n", "-K", "Public Keyfile for the ssh connection (*)";
    printf "  %-15s %s\n", "-T", "List all known tasks.";
    printf "  %-15s %s\n", "-f", "Use this file instead of Rexfile";
    printf "  %-15s %s\n", "-h", "Display this help";
    printf "  %-15s %s\n", "-M", "Load Module instead of Rexfile";
    printf "  %-15s %s\n", "-v", "Display (R)?ex Version";
-   printf "  %-15s %s\n", "-F", "Free-Mode. Don't regard lock file";
+   printf "  %-15s %s\n", "-F", "Force. Don't regard lock file";
+   print "\n";
+   print "(*) Only useful with -e\n";
+   print "\n";
    CORE::exit 0;
 } elsif($opts{'v'}) {
    print "(R)?ex " . $Rex::VERSION . "\n";
@@ -54,11 +63,46 @@ if($opts{'f'}) {
    $::rexfile = $opts{'f'};
 }
 
-if($opts{'M'}) {
+if($opts{'e'}) {
+   # execute the given code
+   my $code = "sub { \n";
+   $code   .= $opts{'e'} . "\n";
+   $code   .= "}";
+
+   $code = eval($code);
+
+   if($opts{'u'}) {
+      Rex::Commands::user($opts{'u'});
+   }
+
+   if($opts{'p'}) {
+      Rex::Commands::password($opts{'p'});
+   }
+
+   if($opts{'P'}) {
+      Rex::Commands::private_key($opts{'P'});
+   }
+
+   if($opts{'K'}) {
+      Rex::Commands::public_key($opts{'K'});
+   }
+
+   my @params = ();
+   if($opts{'H'}) {
+      push @params, split(/\s+/, $opts{'H'});
+   }
+   push @params, $code;
+   push @params, "eval-line-desc";
+
+   Rex::Task->create_task("eval-line", @params);
+   Rex::Commands::do_task("eval-line");
+}
+elsif($opts{'M'}) {
    my $mod = $opts{'M'};
    $mod =~ s{::}{/}g;
    require "$mod.pm";
-} elsif(-f $::rexfile) {
+}
+elsif(-f $::rexfile) {
    if(-f "$::rexfile.lock" && ! exists $opts{'F'}) {
       my $pid = eval { local(@ARGV, $/) = ("$::rexfile.lock"); <>; };
       system("ps aux | awk -F' ' ' { print \$2 } ' | grep $pid >/dev/null 2>&1");
